slider carousel on info page

--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -78,7 +78,8 @@
                     letter-spacing: -0.01em
                     @include font-black
                     margin: 
-                        bottom: 22px
+                        // bottom: 22px
+                        bottom: 18px
                 p
                     // max-width: 95%
                     font-size: 16px
@@ -98,6 +99,7 @@
             h1
                 font-size: 46px
                 max-width: 600px
+                line-height: 125%
                 margin:
                     bottom: 62px
                     bottom: 38px
@@ -113,6 +115,7 @@
             h1
                 max-width: 420px
                 font-size: 42px
+                line-height: 125%
                 margin:
                     bottom: 8px
             .items
@@ -139,11 +142,13 @@
             h5
             h1
                 font-size: 48px
+                // line-height: 125%
             .description
                 p
         .profilePlayground
         .services
             h1
+                // line-height: 125%
             .items
                 width: 100%
                 .item
@@ -163,14 +168,14 @@
                 bottom: 147px
         .bio
             margin:
-                bottom: 96px
+                bottom: 140px
             h5
                 font-size: 16px
                 margin:
                     bottom: 44px
             h1
                 font-size: 54px
-                line-height: 125%
+                line-height: 120%
                 max-width: 653px
                 margin:
                     bottom: 76px
@@ -192,7 +197,7 @@
         .services
             h1
                 font-size: 54px
-                line-height: 125%
+                line-height: 120%
                 max-width: 612px
                 margin:
                     bottom: 18px
