change work covers

--- a/src/assets/sass/portfolioGrid.sass
+++ b/src/assets/sass/portfolioGrid.sass
@@ -34,6 +34,7 @@
             p
                 font-size: 15px
                 @include font-light
+                color: rgba($black, 0.7)
                 letter-spacing: -0.01em
         &:first-child
             margin-top: 0
