--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -201,6 +201,7 @@
                 max-width: 612px
                 margin:
                     bottom: 18px
+                    bottom: 12px
             .items
                 // display: flex
                 // justify-content: space-between
