--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -38,6 +38,13 @@
                 letter-spacing: -0.02em
                 margin-bottom: 28px
                 color: rgba($black, 0.8)
+                a
+                    color: black
+                    @include font-bold
+                    transition: all ease 0.3s
+                    &:hover,
+                    &:active
+                        color: rgba(black, 0.7)
     .profilePlayground
         width: 100%
         height: 0
