--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -72,6 +72,16 @@ html, body
         padding-left: 60px
         padding-right: 60px
 
+@media (min-width: 1400px)
+    .pd-lr
+        padding-left: 4vw
+        padding-right: 4vw
+
+@media (min-width: 1560px)
+    .pd-lr
+        padding-left: 6vw
+        padding-right: 6vw
+
 // .changePage-enter
 //     opacity: 0
 // .changePage-enter-active
