--- a/src/assets/sass/footer.sass
+++ b/src/assets/sass/footer.sass
@@ -106,3 +106,24 @@ footer
             // display: flex
             // justify-content: space-between
             p
+        
+@media (min-width: 1400px)
+    footer
+        // padding: 
+        //     top: 76px
+        h1
+            font-size: 58px
+            // margin-bottom: 54px
+            // max-width: 520px
+        .contactOptions
+            // display: flex
+            // width: 480px
+            // margin-bottom: 94px
+            div
+                // width: 50%
+                p
+                a
+        .credits
+            // display: flex
+            // justify-content: space-between
+            p
