--- a/src/assets/sass/presentation.sass
+++ b/src/assets/sass/presentation.sass
@@ -166,8 +166,8 @@
         padding-top: 166px
         grid-column-gap: 48px
         &::after
-            height: 546px
-            height: 535px
+            // height: 546px
+            height: 536px
         .presentationTitle
             padding:
                 top: 78px
@@ -193,5 +193,110 @@
             padding-left: 50px
             .img
                 height: 92%
+            figcaption
+                a
+
+@media (min-width: 1400px)
+    .hero
+        // padding-top: 166px
+        // grid-column-gap: 48px
+        &::after
+            // height: 546px
+            height: 574px
+        .presentationTitle
+            padding:
+                top: 98px
+            h5
+                // font-size: 16px
+                // margin:
+                //     bottom: 33px
+            h1
+                font-size: 58px
+                // line-height: 120%
+                // max-width: 85%
+                // margin-bottom: 98px
+        .indexDescription
+            // display: flex
+            // flex-wrap: wrap
+            // justify-content: space-between
+            // max-width: 90%
+            p
+                // width: 46.5%
+            a
+        .imagePresentation
+            // box-sizing: border-box
+            // padding-left: 50px
+            .img
+                // height: 92%
+            figcaption
+                a
+
+@media (min-width: 1560px)
+    .hero
+        // padding-top: 166px
+        // grid-column-gap: 48px
+        &::after
+            // height: 546px
+            height: 612px
+        .presentationTitle
+            padding:
+                top: 120px
+            h5
+                // font-size: 16px
+                // margin:
+                //     bottom: 33px
+            h1
+                font-size: 64px
+                // line-height: 120%
+                max-width: 720px
+                // margin-bottom: 98px
+        .indexDescription
+            // display: flex
+            // flex-wrap: wrap
+            // justify-content: space-between
+            // max-width: 90%
+            p
+                // width: 46.5%
+            a
+        .imagePresentation
+            // box-sizing: border-box
+            padding-left: 80px
+            .img
+                // height: 92%
+            figcaption
+                a
+
+@media (min-width: 1640px)
+    .hero
+        padding-top: 188px
+        // grid-column-gap: 48px
+        &::after
+            // height: 546px
+            height: 654px
+        .presentationTitle
+            padding:
+                top: 140px
+            h5
+                // font-size: 16px
+                // margin:
+                //     bottom: 33px
+            h1
+                // font-size: 64px
+                // max-width: 720px
+                // line-height: 120%
+                // margin-bottom: 98px
+        .indexDescription
+            // display: flex
+            // flex-wrap: wrap
+            // justify-content: space-between
+            // max-width: 90%
+            p
+                // width: 46.5%
+            a
+        .imagePresentation
+            // box-sizing: border-box
+            // padding-left: 80px
+            .img
+                // height: 92%
             figcaption
                 a
