--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -231,3 +231,204 @@
                     p
                         // font-size: 16px
                         line-height: 155%
+
+@media (min-width: 1400px)
+    .profile
+        // padding: 
+        //     top: 161px
+        .profileThumbnail
+            // padding-top: 520 / 1200 * 100%
+            // margin:
+            //     bottom: 147px
+        .bio
+            // margin:
+            //     bottom: 140px
+            h5
+                // font-size: 16px
+                // margin:
+                //     bottom: 44px
+            h1
+                // font-size: 54px
+                // line-height: 120%
+                // max-width: 653px
+                // margin:
+                //     bottom: 76px
+                //     bottom: 48px
+            .description
+                // max-width: 800px
+                // display: flex
+                // justify-content: space-between
+                p
+                    // width: 380px
+                    // font-size: 18px
+                    // line-height: 155%
+                    // margin-bottom: 0
+        .profilePlayground
+            // margin:
+            //     bottom: 126px
+            // padding: 
+                // top: 573 / 1158 * 100%
+        .services
+            h1
+                font-size: 58px
+                // line-height: 120%
+                // max-width: 612px
+                // margin:
+                //     bottom: 18px
+                //     bottom: 12px
+            .items
+                // display: flex
+                // justify-content: space-between
+                // flex-wrap: wrap
+                // width: 95%
+                .item
+                    // width: 30%
+                    // width: 29%
+                    // margin:
+                    //     bottom: 56px
+                    h5
+                        // font-size: 16px
+                        // margin: 
+                        //     bottom: 19px
+                    h3
+                        // font-size: 25px
+                        // max-width: 90%
+                        // margin: 
+                        //     bottom: 19px
+                    p
+                        // font-size: 16px
+                        // line-height/: 155%
+
+@media (min-width: 1560px)
+    .profile
+        // padding: 
+            // top: 131px
+        .profileThumbnail
+            // padding-top: 520 / 1200 * 100%
+            // margin:
+            //     bottom: 147px
+        .bio
+            // margin:
+            //     bottom: 140px
+            h5
+                // font-size: 16px
+                // margin:
+                //     bottom: 44px
+            h1
+                font-size: 64px
+                // line-height: 120%
+                // max-width: 653px
+                // margin:
+                //     bottom: 76px
+                //     bottom: 48px
+            .description
+                // max-width: 800px
+                // display: flex
+                // justify-content: space-between
+                p
+                    // width: 380px
+                    // font-size: 18px
+                    // line-height: 155%
+                    // margin-bottom: 0
+        .profilePlayground
+            // margin:
+            //     bottom: 126px
+            // padding: 
+                // top: 573 / 1158 * 100%
+        .services
+            h1
+                // font-size: 64px
+                // line-height: 120%
+                // max-width: 612px
+                // margin:
+                //     bottom: 18px
+                //     bottom: 12px
+            .items
+                // display: flex
+                // justify-content: space-between
+                // flex-wrap: wrap
+                // width: 95%
+                .item
+                    // width: 30%
+                    // width: 29%
+                    // margin:
+                    //     bottom: 56px
+                    h5
+                        // font-size: 16px
+                        // margin: 
+                        //     bottom: 19px
+                    h3
+                        // font-size: 25px
+                        // max-width: 90%
+                        // margin: 
+                        //     bottom: 19px
+                    p
+                        // font-size: 16px
+                        // line-height/: 155%
+
+@media (min-width: 1640px)
+    .profile
+        padding: 
+            top: 148px
+        .profileThumbnail
+            // padding-top: 520 / 1200 * 100%
+            // margin:
+            //     bottom: 147px
+        .bio
+            // margin:
+            //     bottom: 140px
+            h5
+                // font-size: 16px
+                // margin:
+                //     bottom: 44px
+            h1
+                // font-size: 64px
+                // line-height: 120%
+                // max-width: 653px
+                // margin:
+                //     bottom: 76px
+                //     bottom: 48px
+            .description
+                // max-width: 800px
+                // display: flex
+                // justify-content: space-between
+                p
+                    // width: 380px
+                    // font-size: 18px
+                    // line-height: 155%
+                    // margin-bottom: 0
+        .profilePlayground
+            // margin:
+            //     bottom: 126px
+            // padding: 
+                // top: 573 / 1158 * 100%
+        .services
+            h1
+                // font-size: 64px
+                // line-height: 120%
+                // max-width: 612px
+                // margin:
+                //     bottom: 18px
+                //     bottom: 12px
+            .items
+                // display: flex
+                // justify-content: space-between
+                // flex-wrap: wrap
+                // width: 95%
+                .item
+                    // width: 30%
+                    // width: 29%
+                    // margin:
+                    //     bottom: 56px
+                    h5
+                        // font-size: 16px
+                        // margin: 
+                        //     bottom: 19px
+                    h3
+                        // font-size: 25px
+                        // max-width: 90%
+                        // margin: 
+                        //     bottom: 19px
+                    p
+                        // font-size: 16px
+                        // line-height/: 155%
