--- a/src/assets/sass/work.sass
+++ b/src/assets/sass/work.sass
@@ -190,3 +190,88 @@
                 margin:
                     bottom: 31px
                 &:last-child
+
+@media (min-width: 1400px)
+    .work
+        // padding:
+        //     top: 131px
+        .workImage
+            // margin:
+                // bottom: 160px
+        .workHeader
+            // margin:
+                // bottom: 100px
+            .headerDescription
+                h5
+                    // font-size: 16px
+                    // margin:
+                        // bottom: 36px
+                h2
+                    // font-size: 46px
+                    // line-height: 120%
+                    // max-width: 85%
+                    // margin:
+                        // bottom: 34px
+                        // bottom: 38px
+                .description
+                    // margin: 
+                        // bottom: 0
+                    p
+                        // font-size: 17px
+                        // font-size: 17px
+                        // line-height: 160%
+                        // max-width: 80%
+            .headerDetails
+                // align-self: start
+                .item
+                    // margin-bottom: 38px
+                    h6
+                    p
+        .content
+            // padding:
+                // bottom: 52px
+            img
+                // margin:
+                    // bottom: 31px
+                &:last-child
+
+@media (min-width: 1640px)
+    .work
+        padding:
+            top: 148px
+        .workImage
+            // margin:
+            //     bottom: 160px
+        .workHeader
+            // margin:
+            //     bottom: 100px
+            .headerDescription
+                h5
+                    // font-size: 16px
+                    // margin:
+                    //     bottom: 36px
+                h2
+                    font-size: 52px
+                    // line-height: 120%
+                    // max-width: 85%
+                    // margin:
+                    //     bottom: 34px
+                    //     bottom: 38px
+                .description
+                    // margin: 
+                    //     bottom: 0
+                    p
+                        // font-si/th: 80%  
+            .headerDetails
+                // align-self: start
+                .item
+                    // margin-bottom: 38px
+                    h6
+                    p
+        .content
+            // padding:
+                // bottom: 52px
+            img
+                // margin:
+                    // bottom: 31px
+                &:last-child
