--- a/src/assets/sass/profileSlider.sass
+++ b/src/assets/sass/profileSlider.sass
@@ -19,18 +19,13 @@
         display: flex
         justify-content: center
         align-items: center
+        flex-wrap: wrap
         img
-            height: 100%
+            height: 90%
             vertical-align: middle
-            // margin: 
-            //     left: 20px
-            //     right: 20px
-            // max-width: 80vw
-            // height: 100%
-            // height: 100%
-
-            // width: 100% 
-            // max-height: 80vh 
+        caption
+            // width: 100%
+            // max-width: 300px
 
 @media (min-width: 600px)
     .splide__slide
@@ -43,7 +38,7 @@
             // align-items: center
             img
                 max-width: 500px
-                max-height: 100%
+                max-height: 90%
                 height: auto
                 // margin: 
                 //     left: 20px
@@ -69,7 +64,7 @@
 
 @media (min-width: 1200px)
     .splide__slide
-        height: 500px
+        height: 580px
         .dia
             // margin: 0 20px
             // height: 100%
