--- a/src/assets/sass/header.sass
+++ b/src/assets/sass/header.sass
@@ -270,3 +270,40 @@ header
             .navigation
                 ul
                     a
+            
+@media (min-width: 1600px)
+    header
+        .header-inner
+            padding: 
+                top: 64px
+            .branding
+                a
+                    // font-size: 16px
+            .hamburger
+                .hamburger-box-a,
+                .hamburger-box-b
+                .hamburger-box-a
+                .hamburger-box-b
+                &:hover
+                &.active
+                    .hamburger-box-a
+                    .hamburger-box-b
+            .navigation
+                ul
+                    a
+                        // margin-left: 82px
+                        &:hover
+                        &:nth-child(1)
+                        &:nth-child(2)
+                        &:nth-child(3)
+                        &:nth-child(4)
+                        &:last-child
+            &.active
+            .branding
+                a
+            .hamburger
+                .hamburger-box-a,
+                .hamburger-box-b
+            .navigation
+                ul
+                    a
