--- a/src/assets/sass/presentation.sass
+++ b/src/assets/sass/presentation.sass
@@ -82,6 +82,7 @@
         grid-column-gap: 48px
         margin:
             bottom: 34px
+            bottom: 44px
         &::after
             height: 600px
         .presentationTitle
@@ -121,8 +122,10 @@
         grid-column-gap: 30px
         margin:
             bottom: 118px
+            bottom: 128px
         &::after
             height: 490px
+            height: 496px
         .presentationTitle
             grid-area: 1 / 1 / 2 / 4
             order: 1
@@ -135,9 +138,9 @@
                 margin:
                     bottom: 28px
             h1
-                font-size: 44px
+                font-size: 46px
                 // max-width: 480px
-                margin-bottom: 82px
+                margin-bottom: 72px
         .indexDescription
             grid-area: 2 / 1 / 3 / 4
             // align-items: start
@@ -147,6 +150,7 @@
                 max-width: 84%
                 margin-bottom: 20px
                 line-height: 160%
+                font-size: 14px
             a
         .imagePresentation
             grid-area: 1 / 4 / 3 / 6
@@ -167,10 +171,10 @@
         grid-column-gap: 48px
         &::after
             // height: 546px
-            height: 536px
+            height: 570px
         .presentationTitle
             padding:
-                top: 78px
+                top: 114px
             h5
                 font-size: 16px
                 margin:
@@ -187,6 +191,7 @@
             max-width: 90%
             p
                 width: 46.5%
+                font-size: 15px
             a
         .imagePresentation
             box-sizing: border-box
@@ -198,10 +203,7 @@
 
 @media (min-width: 1400px)
     .hero
-        // padding-top: 166px
-        // grid-column-gap: 48px
         &::after
-            // height: 546px
             height: 574px
         .presentationTitle
             padding:
