--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -145,13 +145,20 @@
         padding:
             top: 126px
         .profileThumbnail
+            padding-top: 620 / 1200 * 100%
         .bio
             h5
             h1
                 font-size: 48px
                 // line-height: 125%
             .description
+                max-width: 800px
+                display: flex
+                justify-content: space-between
                 p
+                    width: 46%
+                    font-size: 18px
+                    line-height: 160%
         .profilePlayground
         .services
             h1
@@ -171,6 +178,7 @@
             top: 131px
         .profileThumbnail
             // padding-top: 520 / 1200 * 100%
+            padding-top: 560 / 1200 * 100%
             margin:
                 bottom: 147px
         .bio
@@ -194,7 +202,7 @@
                 p
                     width: 380px
                     font-size: 18px
-                    // line-height: 155%
+                    line-height: 155%
                     margin-bottom: 0
         .profilePlayground
             margin:
