--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -74,13 +74,23 @@ html, body
 
 @media (min-width: 1400px)
     .pd-lr
-        padding-left: 4vw
-        padding-right: 4vw
+        padding-left: 5vw
+        padding-right: 5vw
 
 @media (min-width: 1560px)
     .pd-lr
         padding-left: 6vw
         padding-right: 6vw
+
+@media (min-width: 1800px)
+    .pd-lr
+        padding-left: 12vw
+        padding-right: 12vw
+
+@media (min-width: 1900px)
+    .pd-lr
+        padding-left: 14vw
+        padding-right: 14vw
 
 // .changePage-enter
 //     opacity: 0
