--- a/src/assets/sass/portfolioGrid.sass
+++ b/src/assets/sass/portfolioGrid.sass
@@ -53,7 +53,7 @@
         margin:
             bottom: 24px
         .item
-            width: 48.5%
+            width: 46%
             margin-top: 0
             margin-bottom: 50px
             a.img
@@ -65,26 +65,18 @@
 
 @media (min-width: 900px)
     .portfolioGrid
-        // justify-content: space-between
-        // margin:
-        //     bottom: 24px
         display: grid
         grid-template-columns: repeat(3, 1fr)
-        grid-column-gap: 44px
+        grid-column-gap: 5vw
         .item
-            // width: 48.5%
-            // margin-top: 0
             width: 100%
             margin-bottom: 60px
             a.img
-                padding-top: 480 / 353 * 100%
+                padding-top: 510 / 353 * 100%
             .data
                 a
                     h4
-                        // font-size: 16px
-                        // margin-bottom: 12px
                 p
-                    // font-size: 16px
             &:first-child
 
 @media (min-width: 1100px)
@@ -138,7 +130,7 @@
             // bottom: 28px
         grid-template-columns: repeat(4, 1fr)
         // grid-column-gap: 70px
-        // grid-column-gap: 5vw
+        grid-column-gap: 2.7vw
         .item
             // width: 25%
             // margin-top: 0
