--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -109,3 +109,21 @@ html, body
 
 .fadeIn
     animation: fadeIn 0.7s forwards
+
+// .fade-enter
+//   opacity: 0.01
+//   &.fade-enter-active
+//     opacity: 1
+//     transition: opacity 300ms ease-in
+
+// .fade-exit
+//   opacity: 1
+//   &.fade-exit-active
+//     opacity: 0.01
+//     transition: opacity 300ms ease-in
+
+// .switch-wrapper
+//   position: relative
+
+// .switch-wrapper > div
+//   position: absolute
