--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -1,10 +1,17 @@
 @import 'variables'
 
+@keyframes fadeIn
+    0%
+        opacity: 0
+    100%
+        opacity: 1
+
 html
     background-color: $lightGray
 
 body
     background-color: white
+    animation: fadeIn ease 1s
     
 html, body
     font-family: 'Inter', sans-serif;
@@ -105,38 +112,5 @@ html, body
         padding-left: 14vw
         padding-right: 14vw
 
-// .changePage-enter
-//     opacity: 0
-// .changePage-enter-active
-//     opacity: 1
-// .changePage-exit
-//     opacity: 1
-// .changePage-exit-active
-//     opacity: 1
-
-@keyframes fadeIn
-    0%
-        opacity: 0
-    100%
-        opacity: 1
-
 .fadeIn
     animation: fadeIn 0.7s forwards
-
-// .fade-enter
-//   opacity: 0.01
-//   &.fade-enter-active
-//     opacity: 1
-//     transition: opacity 300ms ease-in
-
-// .fade-exit
-//   opacity: 1
-//   &.fade-exit-active
-//     opacity: 0.01
-//     transition: opacity 300ms ease-in
-
-// .switch-wrapper
-//   position: relative
-
-// .switch-wrapper > div
-//   position: absolute
