--- a/src/assets/sass/profileSlider.sass
+++ b/src/assets/sass/profileSlider.sass
@@ -72,7 +72,7 @@
             // justify-content: center
             // align-items: center
             img
-                max-width: 740px
+                // max-width: 740px
                 // max-height: 100%
                 // height: auto
                 margin: 
