pequeños cambios dic_2020

--- a/src/assets/sass/portfolioGrid.sass
+++ b/src/assets/sass/portfolioGrid.sass
@@ -7,7 +7,8 @@
         bottom: 65px
     .item
         width: 100%
-        margin-top: 50px
+        // margin-top: 50px
+        margin-top: 55px
         // transition: all 0.3s cubic-bezier(0.45, 0, 0.55, 1)
         a.img
             display: block
