--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -25,7 +25,7 @@
         h1
             font-size: 38px
             line-height: 130%
-            line-height: 135%
+            // line-height: 135%
             letter-spacing: -0.02em
             margin:
                 bottom: 80px
@@ -106,7 +106,8 @@
             h1
                 font-size: 46px
                 max-width: 600px
-                line-height: 125%
+                // line-height: 125%
+                // line-height: 130% 
                 margin:
                     bottom: 62px
                     bottom: 38px
@@ -216,7 +217,7 @@
                 max-width: 612px
                 margin:
                     bottom: 18px
-                    bottom: 12px
+                    // bottom: 12px
             .items
                 // display: flex
                 // justify-content: space-between
