--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -99,8 +99,10 @@
 
 @media (min-width: 660px)
     .profile
+        padding:
+            top: 126px
         .profileThumbnail
-            padding-top: 560 / 1200 * 100%
+            padding-top: 660 / 1200 * 100%
         .bio
             h5
             h1
